--- a/css/index.css
+++ b/css/index.css
@@ -40,7 +40,7 @@
   height: 32px;
 }
 
-.header-nav__menu-list-container {
+.header-nav__menu-list {
   display: flex;
   gap: 1rem;
   margin: 0;
@@ -93,10 +93,10 @@
   position: relative;
   display: flex;
   align-items: center;
-  background-image: url('../assets/img/fondo2.jpg');
+  background-image: url('../assets/img/bg-hero-react-galaxy.webp');
   background-position: center;
   background-size: cover;
-  height: 100vh;
+  min-height: 100vh;
   overflow: hidden;
 }
 
@@ -122,8 +122,7 @@
 
 .i-hero__container {
   z-index: 5;
-  display: flex;
-  flex-direction: column;
+  display: grid;
   gap: 2.5rem;
   margin: 0 auto;
   padding: 0 1rem;
@@ -134,7 +133,7 @@
   flex-direction: column;
   align-items: center;
   gap: 0.75rem;
-  max-width: 448px;
+  max-width: 512px;
 }
 
 .i-hero__info-title {
@@ -175,6 +174,7 @@
 
 .i-hero__img-container {
   display: flex;
+  align-items: center;
   justify-content: center;
 }
 
@@ -233,14 +233,14 @@
 
 @media (min-width: 768px) {
   .i-hero__container {
+    grid-template-columns: repeat(2, 1fr);
     max-width: 1024px;
-    margin: 0 auto;
     padding: 0.75rem;
   }
 
-  /* .i-hero__info-container {
+  .i-hero__info-container {
     gap: 1rem;
-  } */
+  }
 
   .i-hero__info-title {
     font-size: 1.75rem;
@@ -260,60 +260,38 @@
   .i-hero__info-link {
     font-size: 1rem;
   }
-}
 
-@media (min-width: 768px) {
-  .i-hero__container {
-    max-width: 1024px;
-    padding: 0.75rem;
+  .i-hero__img-pro {
+    width: 320px;
+    height: 320px;
   }
 
-  /* .i-hero__info-container {
-    gap: 1rem;
-  } */
-
-  .i-hero__info-title {
-    font-size: 1.75rem;
-  }
-
-  .i-hero__info-subtitle {
-    font-size: 1.5rem;
-  }
-
-  .i-hero__info-paragraph {
-    display: flex;
-    font-size: 1.25rem;
-    text-align: center;
-    margin: 0;
-  }
-
-  .i-hero__info-link {
-    font-size: 1rem;
+  .i-hero__img-tech {
+    position: absolute;
+    width: 80px;
+    height: 80px;
   }
 }
 
-.btn-proyectos{
-  padding: 1px;
-  background-color: #61dafb;
-  border: none;
-  border-radius: 0.5rem;
-  color: #000;
-  font-weight: 700;
-  font-size: 0.75rem;
-  font-family: monospace;
-  text-decoration: none;
-  padding: 0.5em 2em;
-  cursor: pointer;
-  /* box-sizing: border-box; */
-  transition: filter 0.25s, box-shadow 0.25s;
+.wave {
+  position: relative;
+  margin: 0;
 }
 
-.btn-proyectos:hover {
-  box-shadow: 0 0 0.25rem 0 #61dafb;
-  filter: brightness(112.5%);
+.wave--rotate-180deg {
+  top: -0.125rem;
+  transform: rotate(180deg);
 }
 
-#iExperience,
-#iContact{
-  padding: 0 1rem;
+.wave__wave {
+  display: block;
+  fill: #282c34;
+}
+
+.experience {
+  background-color: #282c34;
+}
+
+.experience__title {
+  margin: 0;
 }
